--- a/WebContent/list_cities.xhtml
+++ b/WebContent/list_cities.xhtml
@@ -54,10 +54,10 @@
 							#{city.population}
         				</h:column>
         				
-        				<!--  <h:column>
+        				<h:column>
 							<f:facet name="header">By the Sea</f:facet>
 							#{city.isCoastal}
-        				</h:column>-->
+        				</h:column>
         				
         				<h:column>
 							<f:facet name="header">Area</f:facet>
